[gd_scene load_steps=3 format=3 uid="uid://brj830wsnhnq1"]

[ext_resource type="Script" path="res://CloudWorld/cloud_world.gd" id="1_ije8m"]
[ext_resource type="Script" path="res://TargetCamera.gd" id="4_o5g1a"]

[node name="CloudWorld" type="Node2D"]
script = ExtResource("1_ije8m")

[node name="TargetCamera" type="Camera2D" parent="."]
script = ExtResource("4_o5g1a")

[node name="CanvasGroup" type="CanvasLayer" parent="."]

[node name="TestText" type="Label" parent="CanvasGroup"]
offset_right = 40.0
offset_bottom = 23.0
